--- a/ProjectDatabases/Views/Activities/Delete.cshtml
+++ b/ProjectDatabases/Views/Activities/Delete.cshtml
@@ -15,12 +15,12 @@
 
     <div class="form-group py-2">
         <label for="starttime">Start Time:</label>
-        <input type="text" id="starttime" name="starttime" class="form-control" readonly value="@Model?.StartTime" />
+        <input type="datetime-local" id="starttime" name="starttime" class="form-control" readonly value="@Model?.ConvertSqlToHtmlDateTime(Model.StartTime)" />
     </div>
 
     <div class="form-group py-2">
         <label for="endtime">End Time:</label>
-        <input type="text" id="endtime" name="endtime" class="form-control" readonly value="@Model?.EndTime" />
+        <input type="datetime-local" id="endtime" name="endtime" class="form-control" readonly value="@Model?.ConvertSqlToHtmlDateTime(Model.EndTime)" />
     </div>
 
     <button type="submit" class="btn btn-danger">Delete</button>
