--- a/ProjectDatabases/Views/Activities/Edit.cshtml
+++ b/ProjectDatabases/Views/Activities/Edit.cshtml
@@ -14,12 +14,12 @@
 
     <div class="form-group py-2">
         <label for="starttime">Start Time:</label>
-        <input type="datetime" id="starttime" name="starttime" class="form-control" required value="@Model?.StartTime" />
+        <input type="datetime-local" id="starttime" name="starttime" class="form-control" required value="@Model?.ConvertSqlToHtmlDateTime(Model.StartTime)" />
     </div>
 
     <div class="form-group py-2">
         <label for="endtime">End Time:</label>
-        <input type="datetime" id="endtime" name="endtime" class="form-control" required value="@Model?.EndTime" />
+        <input type="datetime-local" id="endtime" name="endtime" class="form-control" required value="@Model?.ConvertSqlToHtmlDateTime(Model.EndTime)" />
     </div>
 
     <button type="submit" class="btn btn-primary">Save</button>
