--- a/ProjectDatabases/Views/Activities/Create.cshtml
+++ b/ProjectDatabases/Views/Activities/Create.cshtml
@@ -23,4 +23,12 @@
 
     <button type="submit" class="btn btn-primary">Add</button>
 </form>
+@* Error message *@
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger">
+        <h2>An error occured!</h2>
+        @TempData["ErrorMessage"]
+    </div>
+}
 <a href="/Activities/Index">Back to Activity list</a>
