--- a/ProjectDatabases/Views/Activities/Edit.cshtml
+++ b/ProjectDatabases/Views/Activities/Edit.cshtml
@@ -24,4 +24,12 @@
 
     <button type="submit" class="btn btn-primary">Save</button>
 </form>
+@* Error message *@
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger">
+        <h2>An error occured!</h2>
+        @TempData["ErrorMessage"]
+    </div>
+}
 <a href="/Activities/Index">Back to Activities list</a>
