--- a/ProjectDatabases/Views/Activities/Delete.cshtml
+++ b/ProjectDatabases/Views/Activities/Delete.cshtml
@@ -25,12 +25,5 @@
 
     <button type="submit" class="btn btn-danger">Delete</button>
 </form>
-@* Error message *@
-@if (TempData["ErrorMessage"] != null)
-{
-    <div class="alert alert-danger">
-        <h2>An error occured!</h2>
-        @TempData["ErrorMessage"]
-    </div>
-}
+@Html.Partial("_ErrorAlert")
 <a href="/Activities/Index">Back to Activities list</a>
