Partial view update using <partial> tag

--- a/ProjectDatabases/Views/Activities/Create.cshtml
+++ b/ProjectDatabases/Views/Activities/Create.cshtml
@@ -23,5 +23,5 @@
 
     <button type="submit" class="btn btn-primary">Add</button>
 </form>
-@Html.Partial("_ErrorAlert")
+<partial name="_ErrorAlert" />
 <a href="/Activities/Index">Back to Activity list</a>
