--- a/ProjectDatabases/Views/Activities/Delete.cshtml
+++ b/ProjectDatabases/Views/Activities/Delete.cshtml
@@ -25,5 +25,5 @@
 
     <button type="submit" class="btn btn-danger">Delete</button>
 </form>
-@Html.Partial("_ErrorAlert")
+<partial name="_ErrorAlert" />
 <a href="/Activities/Index">Back to Activities list</a>
