--- a/ProjectDatabases/Views/Activities/Edit.cshtml
+++ b/ProjectDatabases/Views/Activities/Edit.cshtml
@@ -24,5 +24,5 @@
 
     <button type="submit" class="btn btn-primary">Save</button>
 </form>
-@Html.Partial("_ErrorAlert")
+<partial name="_ErrorAlert" />
 <a href="/Activities/Index">Back to Activities list</a>
