--- a/ProjectDatabases/Views/Activities/Index.cshtml
+++ b/ProjectDatabases/Views/Activities/Index.cshtml
@@ -6,44 +6,48 @@
 <div class="container">
     <h1>@ViewData["Title"]</h1>
     <p>Number of activities in the list: @Model.Count</p>
-    <form class="row" action="/Activities/Index" method="GET">
+    <form class="row my-4" action="/Activities/Index" method="GET">
         <input class="form-control col" type="search" id="search" name="search" placeholder="Search for an activity..." aria-label="Search for an activity" value="@ViewData["Search"]" />
-        <button class="btn btn-outline-success col-auto mx-2" type="submit">Search</button>
+        <button class="btn btn-outline-success col-auto px-4 mx-2" type="submit">Search</button>
     </form>
     @if (@Model.Count > 0)
     {
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th>Activity Name</th>
-                <th>Start Time</th>
-                <th>End Time</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            @{
-                foreach (Activity activity in Model)
-                {
-                    <tr title="@activity.ActivityName">
-                        <td>@activity.ActivityName</td>
-                        <td>@activity.StartTime</td>
-                        <td>@activity.EndTime</td>
-                        <td>
-                            <div class="btn-group">
-                                <a href="/Activities/Edit/@activity.ActivityId" class="btn btn-outline-warning">Edit</a>
-                                <a href="/Activities/Delete/@activity.ActivityId" class="btn btn-outline-danger">Delete</a>
-                            </div>
-                        </td>
+        <div class="table-responsive">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>Activity Name</th>
+                        <th>Start Time</th>
+                        <th>End Time</th>
+                        <th class="text-end">Actions</th>
                     </tr>
-                }
-            }
-        </tbody>
-    </table>
+                </thead>
+                <tbody>
+                    @{
+                        foreach (Activity activity in Model)
+                        {
+                            <tr title="@activity.ActivityName">
+                                <td>@activity.ActivityName</td>
+                                <td>@activity.StartTime</td>
+                                <td>@activity.EndTime</td>
+                                <td class="text-end">
+                                    <div class="btn-group">
+                                        <a href="/Activities/Edit/@activity.ActivityId" class="btn btn-outline-warning">Edit</a>
+                                        <a href="/Activities/Delete/@activity.ActivityId" class="btn btn-outline-danger">Delete</a>
+                                    </div>
+                                </td>
+                            </tr>
+                        }
+                    }
+                </tbody>
+            </table>
+        </div>
     }
     else
     {
         <p>No activities found.</p>
     }
-    <a href="/Activities/Create">Create an activity</a>
+    <div class="row justify-content-center">
+        <a href="/Activities/Create" class="btn btn-lg btn-primary col-md-auto">Create an activity</a>
+    </div>
 </div>
