A new room can be added;

--- a/ProjectDatabases/Views/Rooms/Index.cshtml
+++ b/ProjectDatabases/Views/Rooms/Index.cshtml
@@ -22,7 +22,7 @@
 			foreach (var room in Model)
 			{
 				<tr>
-					<td>@room.Room_number</td>
+					<td>@room.RoomNumber</td>
 					<td>@room.Name</td>
 					<td>@room.Capacity</td>
 					<td>@room.Building</td>
