--- a/ProjectDatabases/Views/Rooms/Index.cshtml
+++ b/ProjectDatabases/Views/Rooms/Index.cshtml
@@ -8,7 +8,7 @@
 	<h1 class="display-4">Rooms</h1>
 </div>
 <a href="/Rooms/Create"> Create New</a>
-<table class="table table-dark">
+<table class="table table-dark table-hover">
 	<thead>
 		<tr>
 			<th>Room_number</th>
