--- a/ProjectDatabases/Views/Teacher/Index.cshtml
+++ b/ProjectDatabases/Views/Teacher/Index.cshtml
@@ -10,8 +10,8 @@
 </div>
 
 
-<table class="table">
-    <thead>
+<table class="table table-hover">
+    <thead class="table-dark">
         <tr>
            
             
