--- a/ProjectDatabases/Views/Activities/Index.cshtml
+++ b/ProjectDatabases/Views/Activities/Index.cshtml
@@ -31,7 +31,7 @@
                                 <td>@activity.StartTime</td>
                                 <td>@activity.EndTime</td>
                                 <td>
-                                    <div class="btn-group">
+                                    <div class="btn-group" role="group">
                                         <a href="/Activities/Edit/@activity.ActivityId" class="btn btn-outline-warning">Edit</a>
                                         <a href="/Activities/Delete/@activity.ActivityId" class="btn btn-outline-danger">Delete</a>
                                     </div>
