--- a/ProjectDatabases/Views/Rooms/Delete.cshtml
+++ b/ProjectDatabases/Views/Rooms/Delete.cshtml
@@ -8,15 +8,11 @@
 
 <h4>Delete Room</h4>
 <form action="/Rooms/Delete" method="POST">
+	<input hidden type="number" name="RoomID" value="@Model?.RoomID" />
 
 	<div class="form-group py-2">
 		<label for="RoomNumber">Room Number:</label>
-		<input type="number" id="RoomNumber" name="RoomNumber" class="form-control" readonly value="@Model?.RoomNumber" />
-	</div>
-
-	<div class="form-group py-2">
-		<label for="Name">Name:</label>
-		<input type="text" id="Name" name="Name" class="form-control" readonly value="@Model?.Name" />
+		<input type="text" id="RoomNumber" name="RoomNumber" class="form-control" readonly value="@Model?.RoomNumber" />
 	</div>
 
 	<div class="form-group py-2">
@@ -25,8 +21,8 @@
 	</div>
 
 	<div class="form-group py-2">
-		<label for="Building">Building:</label>
-		<input type="text" id="Building" name="Building" class="form-control" readonly value="@Model?.Building" />
+		<label for="Type">Type:</label>
+		<input type="text" id="Type" name="Type" class="form-control" readonly value="@Model?.Type" />
 	</div>
 
 	<button type="submit" class="btn btn-primary">Delete</button>
