--- a/ProjectDatabases/Views/Shared/_ErrorAlert.cshtml
+++ b/ProjectDatabases/Views/Shared/_ErrorAlert.cshtml
@@ -4,7 +4,7 @@ It is an inline alert pop-up that you can use in other views
 *@
 @if (TempData["ErrorMessage"] != null)
 {
-    <div class="alert alert-danger my-4">
+    <div class="alert alert-danger my-4" role="alert">
         <h2>An error occured!</h2>
         @TempData["ErrorMessage"]
     </div>
