--- a/ProjectDatabases/Views/Activities/Index.cshtml
+++ b/ProjectDatabases/Views/Activities/Index.cshtml
@@ -5,11 +5,11 @@
 }
 <div class="container">
     <h1>@ViewData["Title"]</h1>
-    <p>Number of activities in the list: @Model.Count</p>
     <form class="row my-4" action="/Activities/Index" method="GET">
         <input class="form-control col" type="search" id="search" name="search" placeholder="Search for an activity..." aria-label="Search for an activity" value="@ViewData["Search"]" />
         <button class="btn btn-outline-success col-auto px-4 mx-2" type="submit">Search</button>
     </form>
+    <partial name="_ErrorAlert" />
     @if (@Model.Count > 0)
     {
         <div class="table-responsive">
