--- a/ProjectDatabases/Views/Activities/Index.cshtml
+++ b/ProjectDatabases/Views/Activities/Index.cshtml
@@ -34,6 +34,7 @@
                                     <div class="btn-group" role="group">
                                         <a href="/Activities/Edit/@activity.ActivityId" class="btn btn-outline-warning">Edit</a>
                                         <a href="/Activities/Delete/@activity.ActivityId" class="btn btn-outline-danger">Delete</a>
+                                        <a href="/Supervisors/Manage?activityId=@activity.ActivityId" class="btn btn-outline-danger">Manage supervisors</a>
                                     </div>
                                 </td>
                             </tr>
