--- a/ProjectDatabases/Views/Student/Delete.cshtml
+++ b/ProjectDatabases/Views/Student/Delete.cshtml
@@ -10,27 +10,27 @@
     <input hidden type="number" name="StudentNumber" value="@Model?.StudentNumber" />
     <div class="form-group py-2">
         <label for="roomId">Room Id:</label>
-        <input type="text" id="RoomId" name="RoomId" class="form-control" placeholder="Your room" required value="@Model?.RoomId" />
+        <input type="text" id="RoomId" name="RoomId" class="form-control" placeholder="Your room" readonly value="@Model?.RoomId" />
     </div>
 
     <div class="form-group py-2">
         <label for="firstName">First Name:</label>
-        <input type="text" id="FirstName" name="FirstName" class="form-control" placeholder="Your first name" required value="@Model?.FirstName" />
+        <input type="text" id="FirstName" name="FirstName" class="form-control" placeholder="Your first name" readonly value="@Model?.FirstName" />
     </div>
 
     <div class="form-group py-2">
         <label for="lastName">Last Name:</label>
-        <input type="text" id="LastName" name="LastName" class="form-control" placeholder="Your last name" required value="@Model?.LastName" />
+        <input type="text" id="LastName" name="LastName" class="form-control" placeholder="Your last name" readonly value="@Model?.LastName" />
     </div>
 
     <div class="form-group py-2">
         <label for="phoneNumber">Phone Number:</label>
-        <input type="text" id="PhoneNumber" name="PhoneNumber" class="form-control" placeholder="Your phone number" required value="@Model?.PhoneNumber" />
+        <input type="text" id="PhoneNumber" name="PhoneNumber" class="form-control" placeholder="Your phone number" readonly value="@Model?.PhoneNumber" />
     </div>
 
     <div class="form-group py-2">
         <label for="classNumber">ClassNumber:</label>
-        <input type="text" id="ClassNumber" name="ClassNumber" class="form-control" placeholder="Your class number" required value="@Model?.ClassNumber" />
+        <input type="text" id="ClassNumber" name="ClassNumber" class="form-control" placeholder="Your class number" readonly value="@Model?.ClassNumber" />
     </div>
     <button type="submit" class="btn btn-primary">Delete</button>
 </form>
