--- a/ProjectDatabases/Views/Teacher/Delete.cshtml
+++ b/ProjectDatabases/Views/Teacher/Delete.cshtml
@@ -11,43 +11,35 @@
 
     <div class="form-group-py-2">
         <label for="TeacherId">Room:</label>
-
-        <input type="text" id="TeacherId" name="TeacherId" class="form-control" required value="@Model?.TeacherId" />
-
+        <input type="text" id="TeacherId" name="TeacherId" class="form-control" readonly value="@Model?.TeacherId" />
     </div>
+
     <div class="form-group-py-2">
         <label for="RoomId">Room:</label>
-
-        <input type="text" id="RoomId" name="RoomId" class="form-control" required value="@Model?.RoomId" />
-
+        <input type="text" id="RoomId" name="RoomId" class="form-control" readonly value="@Model?.RoomId" />
     </div>
+
     <div class="form-group-py-2">
         <label for="FirstName">First Name:</label>
-
-        <input type="text" id="FirstName" name="FirstName" class="form-control" required value="@Model?.FirstName" />
+        <input type="text" id="FirstName" name="FirstName" class="form-control" readonly value="@Model?.FirstName" />
     </div>
-
 
     <div class="form-group-py-2">
-
         <label for="LastName">Last Name:</label>
-
-        <input type="text" id="LastName" name="LastName" class="form-control" required value="@Model?.LastName" />
+        <input type="text" id="LastName" name="LastName" class="form-control" readonly value="@Model?.LastName" />
     </div>
-
 
     <div class="form-group py-2">
         <label for="PhoneNumber">Phone number:</label>
-        <input type="text" id="PhoneNumber" name="PhoneNumber" class="form-control" required value="@Model?.PhoneNumber" />
+        <input type="text" id="PhoneNumber" name="PhoneNumber" class="form-control" readonly value="@Model?.PhoneNumber" />
     </div>
-
 
     <div class="form-group py-2">
         <label for="Age">Age:</label>
-        <input type="text" id="Age" name="Age" class="form-control" required value="@Model?.Age" />
+        <input type="text" id="Age" name="Age" class="form-control" readonly value="@Model?.Age" />
     </div>
 
     <button type="submit" class="btn btn-primary">Delete</button>
 </form>
 
-<a href="/Teacher/Index"> Back to list.</a>
+<a href="/Teacher/Index">Back to list</a>
