--- a/ProjectDatabases/Views/Home/Index.cshtml
+++ b/ProjectDatabases/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-5">Welcome to Project Databases 1.3</h1>
+    <h6>by Group 1B</h6>
+    <h6>Kuba Kubicki, Aloys Stekkinger, Tarik &Uuml;nal and Jayden Meulemans</h6>
 </div>
