--- a/ProjectDatabases/Views/Activities/Create.cshtml
+++ b/ProjectDatabases/Views/Activities/Create.cshtml
@@ -8,7 +8,7 @@
 <form action="/Activities/Create" method="POST">
     <div class="form-group py-2">
         <label for="activityname">Name:</label>
-        <input type="text" id="activityname" name="activityname" class="form-control" required value="@Model?.ActivityName" />
+        <input type="text" id="activityname" name="activityname" class="form-control" placeholder="Enter activity name..." required value="@Model?.ActivityName" />
     </div>
 
     <div class="form-group py-2">
@@ -21,7 +21,7 @@
         <input type="datetime-local" id="endtime" name="endtime" class="form-control" required value="@Model?.ConvertSqlToHtmlDateTime(Model.EndTime)" />
     </div>
 
-    <button type="submit" class="btn btn-primary">Add</button>
+    <button type="submit" class="btn btn-primary">Add activity</button>
 </form>
 <partial name="_ErrorAlert" />
-<a href="/Activities/Index">Back to Activity list</a>
+<a href="/Activities/Index">Back to Activities list</a>
