--- a/ProjectDatabases/Views/Activities/Edit.cshtml
+++ b/ProjectDatabases/Views/Activities/Edit.cshtml
@@ -22,7 +22,7 @@
         <input type="datetime-local" id="endtime" name="endtime" class="form-control" required value="@Model?.ConvertSqlToHtmlDateTime(Model.EndTime)" />
     </div>
 
-    <button type="submit" class="btn btn-primary">Save</button>
+    <button type="submit" class="btn btn-success">Save changes</button>
 </form>
 <partial name="_ErrorAlert" />
 <a href="/Activities/Index">Back to Activities list</a>
