--- a/ProjectDatabases/Views/Activities/Index.cshtml
+++ b/ProjectDatabases/Views/Activities/Index.cshtml
@@ -3,56 +3,51 @@
 @{
     ViewData["Title"] = "Activities";
 }
-<div class="container">
-    <h1>@ViewData["Title"]</h1>
-    <form class="row my-4" action="/Activities/Index" method="GET">
-        <input class="form-control col" type="search" id="search" name="search" placeholder="Search for an activity..." aria-label="Search for an activity" value="@ViewData["Search"]" />
-        <button class="btn btn-outline-success col-auto px-4 mx-2" type="submit">Search</button>
-    </form>
-    <partial name="_ErrorAlert" />
-    @if (@Model.Count > 0)
-    {
-        <div class="table-responsive">
-            <table class="table table-hover text-center">
-                <thead>
-                    <tr class="fs-5 bg-primary text-light">
-                        <th>Activity Name</th>
-                        <th>Start Time</th>
-                        <th>End Time</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @{
-                        foreach (Activity activity in Model)
-                        {
-                            <tr title="@activity.ActivityName">
-                                <td>@activity.ActivityName</td>
-                                <td>@activity.StartTime</td>
-                                <td>@activity.EndTime</td>
-                                <td>
-                                    <div class="btn-group" role="group">
-                                        <a href="/Activities/Edit/@activity.ActivityId" class="btn btn-outline-warning">Edit</a>
-                                        <a href="/Activities/Delete/@activity.ActivityId" class="btn btn-outline-danger">Delete</a>
-
-                                        <a href="/Supervisors/Manage?activityId=@activity.ActivityId" class="btn btn-outline-danger">Manage supervisors</a>
-
-                                        <a href="/Activities/Participants/@activity.ActivityId" class="btn btn-outline-primary">Participants</a>
-
-                                    </div>
-                                </td>
-                            </tr>
-                        }
+<h1>@ViewData["Title"]</h1>
+<form class="row my-4" action="/Activities/Index" method="GET">
+    <input class="form-control col" type="search" id="search" name="search" placeholder="Search for an activity..." aria-label="Search for an activity" value="@ViewData["Search"]" />
+    <button class="btn btn-outline-success col-auto px-4 mx-2" type="submit">Search</button>
+</form>
+<partial name="_ErrorAlert" />
+@if (@Model.Count > 0)
+{
+    <div class="table-responsive">
+        <table class="table table-hover text-center">
+            <thead>
+                <tr class="bg-primary text-light">
+                    <th>Activity Name</th>
+                    <th>Start Time</th>
+                    <th>End Time</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                @{
+                    foreach (Activity activity in Model)
+                    {
+                        <tr title="@activity.ActivityName">
+                            <td>@activity.ActivityName</td>
+                            <td>@activity.StartTime</td>
+                            <td>@activity.EndTime</td>
+                            <td>
+                                <div class="btn-group btn-group-sm" role="group">
+                                    <a href="/Activities/Edit/@activity.ActivityId" class="btn btn-outline-warning">Edit</a>
+                                    <a href="/Activities/Delete/@activity.ActivityId" class="btn btn-outline-danger">Delete</a>
+                                    <a href="/Supervisors/Manage?activityId=@activity.ActivityId" class="btn btn-outline-primary">Supervisors</a>
+                                    <a href="/Activities/Participants/@activity.ActivityId" class="btn btn-outline-primary">Participants</a>
+                                </div>
+                            </td>
+                        </tr>
                     }
-                </tbody>
-            </table>
-        </div>
-    }
-    else
-    {
-        <p>No activities found.</p>
-    }
-    <div class="row justify-content-center">
-        <a href="/Activities/Create" class="btn btn-lg btn-primary col-md-auto">Create an activity</a>
+                }
+            </tbody>
+        </table>
     </div>
+}
+else
+{
+    <p>No activities found.</p>
+}
+<div class="row justify-content-center">
+    <a href="/Activities/Create" class="btn btn-lg btn-primary col-md-auto">Create an activity</a>
 </div>
