--- a/ProjectDatabases/Views/Rooms/Edit.cshtml
+++ b/ProjectDatabases/Views/Rooms/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <h4>@errorMessage</h4>
 
-<h4>Edit Room</h4>
+<h1>@ViewData["Title"]</h1>
 <form action="/Rooms/Edit" method="POST">
 	<input hidden type="number" name="RoomID" value="@Model?.RoomID" />
 
@@ -25,7 +25,7 @@
 		<input type="text" id="Type" name="Type" class="form-control" required value="@Model?.Type" />
 	</div>
 
-	<button type="submit" class="btn btn-primary">Save</button>
+	<button type="submit" class="btn btn-success">Save changes</button>
 </form>
 
-<a href="/Rooms/Index">Back to list</a>
+<a href="/Rooms/Index">Back to Rooms list</a>
