--- a/ProjectDatabases/Views/Rooms/Index.cshtml
+++ b/ProjectDatabases/Views/Rooms/Index.cshtml
@@ -1,40 +1,44 @@
 ﻿@model List<ProjectDatabases.Models.Room>
 
 @{
-	ViewData["Title"] = "Rooms";
+    ViewData["Title"] = "Rooms";
 }
 
-<div class="text-center">
-	<h1 class="display-4">Rooms</h1>
+<h1>@ViewData["Title"]</h1>
+<div class="table-responsive">
+    <table class="table table-hover text-center">
+        <thead>
+            <tr class="bg-primary text-light">
+                <th>Room Number</th>
+                <th>Capacity</th>
+                <th>Type</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            @{
+                foreach (var room in Model)
+                {
+                    <tr title="@room.RoomNumber">
+                        <td>@room.RoomNumber</td>
+                        <td>@room.Capacity</td>
+                        <td>@room.Type</td>
+                        <td>
+                            <div class="btn-group" role="group">
+                                <a href="/Rooms/Edit/@room.RoomID" class="btn btn-outline-warning">Edit</a>
+                                <a href="/Rooms/Delete/@room.RoomID" class="btn btn-outline-danger">Delete</a>
+                                @if (room.Type == "student")
+                                {
+                                    <a href="/Rooms/DormitoryStudents/@room.RoomID" class="btn btn-outline-primary">Manage Dormitory</a>
+                                }
+                            </div>
+                        </td>
+                    </tr>
+                }
+            }
+        </tbody>
+    </table>
 </div>
-<a href="/Rooms/Create"> Create New</a>
-<table class="table table-dark table-hover">
-	<thead>
-		<tr>
-			<th>Room_number</th>
-			<th>Capacity</th>
-			<th>Type</th>
-			<th>Actions</th>
-		</tr>
-	</thead>
-	<tbody>
-		@{
-			foreach (var room in Model)
-			{
-				<tr>
-					<td>@room.RoomNumber</td>
-					<td>@room.Capacity</td>
-					<td>@room.Type</td>
-					<td>
-						<a href="/Rooms/Edit/@room.RoomID">Edit</a> |
-						<a href="/Rooms/Delete/@room.RoomID">Delete</a> |
-						@if (room.Type == "student")
-						{
-							<a href="/Rooms/DormitoryStudents/@room.RoomID">Display Dormitory</a>
-						}
-					</td>
-				</tr>
-			}
-		}
-	</tbody>
-</table>
+<div class="row justify-content-center">
+    <a href="/Rooms/Create" class="btn btn-lg btn-primary col-md-auto">Add new room</a>
+</div>
