--- a/ProjectDatabases/Views/Student/Create.cshtml
+++ b/ProjectDatabases/Views/Student/Create.cshtml
@@ -1,39 +1,37 @@
 ﻿@model ProjectDatabases.Models.Student
 @{
-    ViewData["Title"] = "Create User";
+    ViewData["Title"] = "Add Student";
     string? errorMessage = (string)ViewData["ErrorMessage"];
 
 }
 <h1>@ViewData["Title"]</h1>
 
 <h4>@errorMessage</h4>
-
-<h4>New User</h4>
 <form action="/Student/Create" method="post">
 
     <div class="form-group py-2">
         <label for="roomId">Room Id:</label>
-        <input type="text" id="RoomId" name="RoomId" class="form-control" placeholder="Your room" required value="@Model?.RoomId" />
+        <input type="text" id="RoomId" name="RoomId" class="form-control" placeholder="Enter room..." required value="@Model?.RoomId" />
     </div>
 
     <div class="form-group py-2">
         <label for="firstName">First Name:</label>
-        <input type="text" id="FirstName" name="FirstName" class="form-control" placeholder="Your first name" required value="@Model?.FirstName" />
+        <input type="text" id="FirstName" name="FirstName" class="form-control" placeholder="Enter first name..." required value="@Model?.FirstName" />
     </div>
 
     <div class="form-group py-2">
         <label for="lastName">Last Name:</label>
-        <input type="text" id="LastName" name="LastName" class="form-control" placeholder="Your last name" required value="@Model?.LastName"/>
+        <input type="text" id="LastName" name="LastName" class="form-control" placeholder="Enter last name..." required value="@Model?.LastName"/>
     </div>
 
     <div class="form-group py-2">
         <label for="phoneNumber">Phone Number:</label>
-        <input type="text" id="PhoneNumber" name="PhoneNumber" class="form-control" placeholder="Your phone number" required value="@Model?.PhoneNumber" />
+        <input type="text" id="PhoneNumber" name="PhoneNumber" class="form-control" placeholder="Enter phone number..." required value="@Model?.PhoneNumber" />
     </div>
 
     <div class="form-group py-2">
-        <label for="classNumber">ClassNumber:</label>
-        <input type="text" id="ClassNumber" name="ClassNumber" class="form-control" placeholder="Your class number" required value="@Model?.ClassNumber"/>
+        <label for="classNumber">Class:</label>
+        <input type="text" id="ClassNumber" name="ClassNumber" class="form-control" placeholder="Enter class number..." required value="@Model?.ClassNumber"/>
     </div>
     <button type="submit" class="btn btn-primary">Create</button>
 </form>
