--- a/ProjectDatabases/Views/Student/Delete.cshtml
+++ b/ProjectDatabases/Views/Student/Delete.cshtml
@@ -1,11 +1,9 @@
 ﻿@model ProjectDatabases.Models.Student
 @{
-    ViewData["Title"] = "Delete User";
+    ViewData["Title"] = "Delete Student";
 }
 <h1>@ViewData["Title"]</h1>
 
-
-<h4>New User</h4>
 <form action="/Student/Delete" method="post">
     <input hidden type="number" name="StudentNumber" value="@Model?.StudentNumber" />
     <div class="form-group py-2">
@@ -29,10 +27,10 @@
     </div>
 
     <div class="form-group py-2">
-        <label for="classNumber">ClassNumber:</label>
+        <label for="classNumber">Class:</label>
         <input type="text" id="ClassNumber" name="ClassNumber" class="form-control" placeholder="Your class number" readonly value="@Model?.ClassNumber" />
     </div>
-    <button type="submit" class="btn btn-primary">Delete</button>
+    <button type="submit" class="btn btn-danger">Delete</button>
 </form>
 
 <a href="/Student/Index">Back to list</a>
