--- a/ProjectDatabases/Views/Student/Edit.cshtml
+++ b/ProjectDatabases/Views/Student/Edit.cshtml
@@ -1,14 +1,12 @@
 ﻿@model ProjectDatabases.Models.Student
 @{
-    ViewData["Title"] = "Edit User";
+    ViewData["Title"] = "Edit Student";
     string? errorMessage = (string)ViewData["ErrorMessage"];
 }
 <h1>@ViewData["Title"]</h1>
 
-
 <h4>@errorMessage</h4>
 
-<h4>New User</h4>
 <form action="/Student/Edit" method="post">
     <input hidden type="number" name="StudentNumber" value="@Model?.StudentNumber"/> 
     <div class="form-group py-2">
@@ -32,10 +30,10 @@
     </div>
 
     <div class="form-group py-2">
-        <label for="classNumber">ClassNumber:</label>
+        <label for="classNumber">Class:</label>
         <input type="text" id="ClassNumber" name="ClassNumber" class="form-control" placeholder="Your class number" required value="@Model?.ClassNumber" />
     </div>
-    <button type="submit" class="btn btn-primary">Edit</button>
+    <button type="submit" class="btn btn-success">Save changes</button>
 </form>
 
 <a href="/Student/Index">Back to list</a>
