--- a/ProjectDatabases/Views/Teacher/Delete.cshtml
+++ b/ProjectDatabases/Views/Teacher/Delete.cshtml
@@ -5,26 +5,21 @@
 }
 
 <h4>@errorMesssage</h4>
-<h4>New Teacher</h4>
+<h1>@ViewData["Title"]</h1>
 <form action="/Teacher/Delete" method="POST">
-    
+    <input type="text" id="TeacherId" name="TeacherId" class="form-control" hidden value="@Model?.TeacherId" />
 
-    <div class="form-group-py-2">
-        <label for="TeacherId">Room:</label>
-        <input type="text" id="TeacherId" name="TeacherId" class="form-control" readonly value="@Model?.TeacherId" />
-    </div>
-
-    <div class="form-group-py-2">
-        <label for="RoomId">Room:</label>
+    <div class="form-group py-2">
+        <label for="RoomId">Room Id:</label>
         <input type="text" id="RoomId" name="RoomId" class="form-control" readonly value="@Model?.RoomId" />
     </div>
 
-    <div class="form-group-py-2">
+    <div class="form-group py-2">
         <label for="FirstName">First Name:</label>
         <input type="text" id="FirstName" name="FirstName" class="form-control" readonly value="@Model?.FirstName" />
     </div>
 
-    <div class="form-group-py-2">
+    <div class="form-group py-2">
         <label for="LastName">Last Name:</label>
         <input type="text" id="LastName" name="LastName" class="form-control" readonly value="@Model?.LastName" />
     </div>
@@ -39,7 +34,7 @@
         <input type="text" id="Age" name="Age" class="form-control" readonly value="@Model?.Age" />
     </div>
 
-    <button type="submit" class="btn btn-primary">Delete</button>
+    <button type="submit" class="btn btn-danger">Delete teacher</button>
 </form>
 
-<a href="/Teacher/Index">Back to list</a>
+<a href="/Teacher/Index">Back to Teacher list</a>
