--- a/ProjectDatabases/Views/Teacher/Index.cshtml
+++ b/ProjectDatabases/Views/Teacher/Index.cshtml
@@ -4,46 +4,44 @@
     ViewData["Title"] = "Teachers";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Teachers</h1>
-
-    <p>Number of teachers in the list: @Model.Count</p>
-    <form class="row my-4" action="/Teacher/Index" method="GET">
-    <input class="form-control col" type="search" id="search" name="search" placeholder="Search for a teacher..." aria-label="Search for a teacher" value="@ViewData["Search"]" />
+<h1>@ViewData["Title"]</h1>
+<form class="row my-4" action="/Teacher/Index" method="GET">
+    <input class="form-control col" type="search" id="search" name="search" placeholder="Search for a teacher by last name..." aria-label="Search for a teacher" value="@ViewData["Search"]" />
     <button class="btn btn-outline-success col-auto px-4 mx-2" type="submit">Search</button>
-    </form>
-</div>
+</form>
 
-
-<table class="table table-hover">
-    <thead class="table-dark">
-        <tr>
-           
-            
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Phone number</th>
-            <th>Age</th>
-            <th>Action</th>
-        </tr>
-    </thead>
-    <tbody>
-        @{
-            foreach (var teacher in Model)
-            {
-                <tr>
-                    
-                    <td>@teacher.FirstName</td>
-                    <td>@teacher.LastName</td>
-                    <td>@teacher.PhoneNumber</td>
-                    <td>@teacher.Age</td>
-                    <td>
-                        <a href="/Teacher/Edit/@teacher.TeacherId">Edit</a>
-                        <a href="/Teacher/Delete/@teacher.TeacherId">Delete</a>
-                    </td>
-                </tr>
+<div class="table-responsive">
+    <table class="table table-hover text-center">
+        <thead>
+            <tr class="bg-primary text-light">
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Phone number</th>
+                <th>Age</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            @{
+                foreach (var teacher in Model)
+                {
+                    <tr title="@($"{teacher.FirstName} {teacher.LastName}")">
+                        <td>@teacher.FirstName</td>
+                        <td>@teacher.LastName</td>
+                        <td>@teacher.PhoneNumber</td>
+                        <td>@teacher.Age</td>
+                        <td>
+                            <div class="btn-group">
+                                <a href="/Teacher/Edit/@teacher.TeacherId" class="btn btn-outline-warning">Edit</a>
+                                <a href="/Teacher/Delete/@teacher.TeacherId" class="btn btn-outline-danger">Delete</a>
+                            </div>
+                        </td>
+                    </tr>
+                }
             }
-        }
-    </tbody>
-</table>
-<a href="/Teacher/Create"> Add</a>
+        </tbody>
+    </table>
+</div>
+<div class="row justify-content-center">
+    <a href="/Teacher/Create" class="btn btn-lg btn-primary col-md-auto">Add teacher</a>
+</div>
